--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "debug": "^4.4.0",
     "depd": "^2.0.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "is-promise": "^4.0.0",
     "jade": "^1.11.0",
