--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.2.0",
     "@react-google-maps/api": "^2.20.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
