--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.53.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.4.0",
